# polimorphy_conspiracy

./: CMakeLists.txt  Compiler Explorer Code.cpp  runCmake.bat
OOP/: OOP.cpp  OOP.sln  OOP.vcxproj
OOP/OOP/x64/Debug/: OOP.exe.recipe  OOP.ilk  vc143.idb
OOP/OOP/x64/Debug/OOP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OOP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OOP/OOP/x64/Release/: OOP.exe.recipe  OOP.iobj  OOP.ipdb
OOP/OOP/x64/Release/OOP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OOP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: DODShapes.h  arrayOfStructs.h  circle.h  rectangle.h  shape_base.h  square.h  structOfArrays.h  switch.h  timer.h  triangle.h
src/: DODShapes.cpp  OOP.cpp  timer.cpp
